[package]
name = "spl-governance"
version = "0.1.0"
description = "Solana Program Library Governance"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.6"
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.2"
serde = "1.0.121"
serde_derive = "1.0.103"

[dev-dependencies]
assert_matches = "1.5.0"
log = "0.4.14"
proptest = "0.10"
solana-program-test = "1.6.6"
solana-sdk = "1.6.6"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]

