[package]
name = "spl-token-lending"
version = "0.1.0"
description = "Solana Program Library Token Lending"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.4.0"
enumflags2 = "0.6.4"
num-derive = "0.3"
num-traits = "0.2"
safe-transmute = "0.11.0"
serum_dex = { git = "https://github.com/jstarry/serum-dex", rev = "8ee1999", features = ["exclude-entrypoint"] }
solana-program = "1.4.6"
spl-token = { path = "../../token/program", features = [ "exclude_entrypoint" ] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
